--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GWP_mvp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GWT_dispatch"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Common_Java"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Common_Java_GroupBuy"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/GroupBuy_API_Server"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
