--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 		<repository>
 			<id>nexus</id>
 			<name>local nexus</name>
-			<!-- <url>http://localhost:8081/nexus/content/groups/public</url>  -->
+			<!-- <url>http://localhost:8081/nexus/content/groups/public</url> -->
 			<url>http://192.168.1.101:8091/nexus/content/groups/public</url>
 		</repository>
 		<repository>
@@ -37,6 +37,12 @@
 			<groupId>com.orange</groupId>
 			<artifactId>Common_Java_GroupBuy</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
 		</dependency>
 		<!-- 3rd party -->
 		<dependency>
