--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,6 +1,7 @@
-#Tue Aug 09 22:58:35 CEST 2011
+#Sun Oct 16 11:52:44 CST 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
 lastWarOutDir=C\:/work/tc/gckj/GroupBuy_Web_UI/src/webapp
+launchConfigExternalUrlPrefix=
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=true
