--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		</org.springframework.version>
 		<org.apache.mahout.version>0.4</org.apache.mahout.version>
 		<jettyVersion>7.3.0.v20110203</jettyVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<!-- internal project -->
@@ -92,6 +93,7 @@
 				</executions>
 				<configuration>
 					<runTarget>src/main/webapp/GroupBuy_Web_UI.html</runTarget>
+					<encoding>UTF-8</encoding> 
 				</configuration>
 			</plugin>
 			<plugin>
@@ -101,6 +103,7 @@
 				<configuration>
 					<webappDirectory>target/GroupBuy_Web_UI-1.0-SNAPSHOT</webappDirectory>
 					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+					<encoding>UTF-8</encoding> 
 				</configuration>
 			</plugin>
 		</plugins>
