--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,24 +1,43 @@
-# A default log4j configuration for log4j users.
-#
-# To use this configuration, deploy it into your application's WEB-INF/classes
-# directory.  You are also encouraged to edit it as you like.
+# level \u662F\u65E5\u5FD7\u8BB0\u5F55\u7684\u4F18\u5148\u7EA7\uFF0C\u5206\u4E3AOFF\u3001FATAL\u3001ERROR\u3001WARN\u3001INFO\u3001DEBUG\u3001ALL\u6216\u8005\u60A8\u5B9A\u4E49\u7684\u7EA7\u522B
+log4j.rootLogger=INFO,dailyRollingFile,CONSOLE
+log4j.addivity.org.apache=true
+# apply to console
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Target=System.out
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=[%d] [%t] [%-5p] %m%n
 
-# Configure the console as our one appender
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
+# apply to file
+#log4j.appender.FILE=org.apache.log4j.FileAppender
+#log4j.appender.FILE.File=./logs/log.txt 
+#log4j.appender.FILE.Append=true
+#log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.FILE.layout.ConversionPattern=[%d] [%-5p] -%l -%m%n
+# only print error log
+#log4j.appender.ERRORFILE=org.apache.log4j.FileAppender
+#log4j.appender.ERRORFILE.File=./logs/error.txt 
+#log4j.appender.ERROR.Append=true
+#log4j.appender.ERRORFILE.Threshold = ERROR
+#log4j.appender.ERRORFILE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.ERRORFILE.layout.ConversionPattern=[%d] [%-5p] -%l -%m%n
+# RollingFile
+#log4j.appender.RollingFile=org.apache.log4j.FileAppender
+#log4j.appender.RollingFile.File=./logs/rollingFile.txt
+#log4j.appender.RollingFile.Append=true
+#log4j.appender.RollingFile.MaxFileSize=100MB
+#log4j.appender.RollingFile.MaxBackupIndex=10
+#log4j.appender.FILE.layout.ConversionPattern=[%d] [%-5p] -%l -%m%n
 
-# tighten logging on the DataNucleus Categories
-log4j.category.DataNucleus.JDO=WARN, A1
-log4j.category.DataNucleus.Persistence=WARN, A1
-log4j.category.DataNucleus.Cache=WARN, A1
-log4j.category.DataNucleus.MetaData=WARN, A1
-log4j.category.DataNucleus.General=WARN, A1
-log4j.category.DataNucleus.Utility=WARN, A1
-log4j.category.DataNucleus.Transaction=WARN, A1
-log4j.category.DataNucleus.Datastore=WARN, A1
-log4j.category.DataNucleus.ClassLoading=WARN, A1
-log4j.category.DataNucleus.Plugin=WARN, A1
-log4j.category.DataNucleus.ValueGeneration=WARN, A1
-log4j.category.DataNucleus.Enhancer=WARN, A1
-log4j.category.DataNucleus.SchemaTool=WARN, A1
+log4j.appender.dailyRollingFile=org.apache.log4j.RollingFileAppender
+#log4j.appender.dailyRollingFile.DatePattern='.'yyyy-MM-dd
+log4j.appender.dailyRollingFile.File=./logs/webui.log
+log4j.appender.dailyRollingFile.Append=true
+log4j.appender.dailyRollingFile.Threshold=INFO
+log4j.appender.dailyRollingFile.Encoding=UTF-8
+log4j.appender.dailyRollingFile.MaxFileSize=50MB
+log4j.appender.dailyRollingFile.MaxBackupIndex=5
+log4j.appender.dailyRollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.dailyRollingFile.layout.ConversionPattern=[%d] [%t] [%-5p] %m%n
+
+
+
